# pacman

./: .gitignore  .travis.yml  LICENSE.md  README.md  analysis_student.py  baselineTeam.py  capture.py  captureAgents.py  captureGraphicsDisplay.py  deploy.sh  eightpuzzle.py  featureExtractors.py  files.md  game.py  gen_docs.sh  ghostAgents.py  graphicsCrawlerDisplay.py  graphicsDisplay.py  graphicsUtils.py  keyboardAgents.py  layout.py  mazeGenerator.py  myTeam_student.py  pacman.py  pacmanAgents.py  pyproject.toml  requirements.txt  run_style.sh  run_tests.py  search.py  searchAgents.py  searchAgents_student.py  setup.cfg  setup.py  textGridworldDisplay.py  util.py
.ci/: build_site.sh  flake8.cfg  run.sh
.ci/html/: index.html
.github/workflows/: main.yml
ghost_crash/: ghost_crash.replay  ghost_crash.txt
p0/: buyLotsOfFruit.py  shop.py  shopSmart.py
pacai/: __init__.py  baselineTeam.py  capture.py  captureGraphicsDisplay.py  crawler.py  distanceCalculator.py  environment.py  graphicsCrawlerDisplay.py  graphicsDisplay.py  graphicsGridworldDisplay.py  graphicsUtils.py  gridworld.py  layout.py  pacman.py  search.py  search_student.py  textDisplay.py  textGridworldDisplay.py
pacai/agents/: __init__.py  agent.py  base.py  capture.py  captureAgents.py  ghostAgents.py  gowest.py  greedy.py  keyboard.py  keyboardAgents.py  learningAgents.py  leftturn.py  multiAgents_student.py  pacmanAgents.py  qlearningAgents_student.py  random.py  searchAgents.py  timeout.py  (+2 more)
tests/: test_bin.py  test_capture.py  test_replay.py  test_ui.py  test_util.py  test_util_containers.py
(+112 files in other folders)
