[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "packaging>=21.3",
    "pdoc3>=0.7.0",
    "setuptools",
    "twine",
    "vermin",
]

[project]
name = "linqs-pacai"
version = "1.3.0"
description = "A modified version of the Pacman educational project from the Berkley AI Lab."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}

authors = [
    {name = "Eriq Augustine", email = "eaugusti@ucsc.edu"},
    {name = "LINQS", email = "linqs.edu@gmail.com"},
]

keywords = ['AI', 'Artificial Intelligence', 'Education', 'Teaching']
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Topic :: Education',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

dependencies = [
    "Pillow>=8.3.2",
]

[project.urls]
Homepage = "https://github.com/linqs/pacman"
Repository = "https://github.com/linqs/pacman"

[tool.setuptools.packages.find]
where = ["."]
include = ["pacai*"]
namespaces = false
